# testTask

./: .env_dist  .gitignore  README.md  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: init.py
app/: __init__.py  app.py  main.py  metadata.py
app/api/: __init__.py  api.py
app/api/category/: __init__.py  create.py  get.py  router.py
app/api/category/requests/: __init__.py  create_category.py
app/api/category/responses/: __init__.py  create_category.py  (+1 more)
app/api/customer/: __init__.py  create.py  get.py  router.py
app/api/order/: __init__.py  create.py  get.py  router.py
app/api/order_item/: __init__.py  create.py  get.py  router.py
app/api/product/: __init__.py  create.py  get.py  router.py  update.py
app/core/: exception_handlers.py  middleware.py  routes.py  settings.py
app/core/depends/: category_service.py  customer_service.py  order_item_service.py  order_service.py  product_service.py  session.py
app/daos/: __init__.py  base.py  category.py  customer.py  order.py  order_item.py  product.py
app/orm/: __init__.py  category.py  customer.py  order.py  order_item.py  product.py  tablenames.py
app/orm/core/: __init__.py  model.py  session.py
app/orm/types/: __init__.py  fk.py  number.py  text.py  time.py
app/schemas/: __init__.py  schema.py
app/services/: __init__.py  base.py  category.py  customer.py  order.py  order_item.py  product.py
docker/: Dockerfile
docker/compose/: alembic.yml  app.yml  database.yml  networks.yml
queries/: children_count.sql  prombles.md  top_5.sql  total_sums.sql
(+22 files in other folders)
